--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Archive
+title: Wiyt's Blog
 ---
-<h3>全部文章：</h3>
+<h3>最新文章：</h3>
 <ul>
 　　{% for post in site.posts %}
 　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
