--- a/archive.html
+++ b/archive.html
@@ -8,3 +8,7 @@ title: Archive
 　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
 　　{% endfor %}
 </ul>
+		<script>
+			var navitem = document.querySelectorAll(".sidebar-nav-item");
+			navitem[1].className = "sidebar-nav-item active"
+		</script>
