--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@ title: Wiyt's Blog
 ---
 <h3>最新文章：</h3>
 <ul>
-　　{% for post in site.posts %}
+<!-- 　　{% for post in site.posts %}
 　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
 　　{% endfor %}
+
+	<ul> -->
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+      <p>{{ post.excerpt }}</p>
+    </li>
+  {% endfor %}
+	</ul>
 </ul>
