--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Wiyt's Blog
   {% for post in site.posts %}
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
-      <p>{{ post.excerpt }}</p>
+      <!-- <p>{{ post.excerpt }}</p> -->
     </li>
   {% endfor %}
 	</ul>
