--- a/blogs/index.html
+++ b/blogs/index.html
@@ -3,7 +3,7 @@ layout: default
 title: 『幽窗孤灯』
 ---
 
-<h3>意见</h3>
+<h3>Blogs</h3>
 <ul class="artical-list">
 {% for post in site.categories.blogs %}
     <li>
