--- a/blogs/index.html
+++ b/blogs/index.html
@@ -5,7 +5,7 @@ title: 『幽窗孤灯』
 
 <h3>Blogs</h3>
 <ul class="artical-list">
-{% for post in site.categories.blogs %}
+{% for post in site.categories.blog %}
     <li>
         <h2>
             <a href="{{ post.url }}">{{ post.title }}</a>
