--- a/archive.html
+++ b/archive.html
@@ -5,10 +5,12 @@ title: Archive
 <h3>全部文章：</h3>
 <ul>
 　　{% for post in site.posts %}
-　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+　　<li>{{ post.date | date_to_string }} 
+			<a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+		</li>
 　　{% endfor %}
 </ul>
-		<script>
-			var navitem = document.querySelectorAll(".sidebar-nav-item");
-			navitem[1].className = "sidebar-nav-item active"
-		</script>
+<script>
+	var navitem = document.querySelectorAll(".sidebar-nav-item");
+	navitem[1].className = "sidebar-nav-item active"
+</script>
