--- a/categories.html
+++ b/categories.html
@@ -49,3 +49,7 @@ title: 『幽窗孤灯』
 </ul>
 </ul>
 </ul>
+<script>
+	var navitem = document.querySelectorAll(".sidebar-nav-item");
+	navitem[2].className = "sidebar-nav-item active"
+</script>
