--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: 『幽窗孤灯』
   {% for post in site.posts %}
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
-      <!-- <p>{{ post.excerpt }}</p> -->
+      <p>{{ post.excerpt }}</p>
     </li>
   {% endfor %}
 	</ul>
