--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: 『幽窗孤灯』
 	<ul> -->
   {% for post in site.posts %}
     <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
+      <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
       <p>{{ post.excerpt }}</p>
     </li>
   {% endfor %}
