--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: 『幽窗孤灯』
   {% for post in site.posts %}
     <li>
       <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
-      <p>{{ post.excerpt }}</p>
+      <!-- <p>{{ post.excerpt }}</p> -->
     </li>
   {% endfor %}
 	</ul>
