--- a/about.html
+++ b/about.html
@@ -2,15 +2,12 @@
 layout: default
 title: Archive
 ---
-<p>
-	GitHub是一个共享虚拟主机服务，用于存放使用Git版本控制的软件代码和内容项目。它由GitHub公司（曾称Logical Awesome）的开发者Chris Wanstrath、PJ Hyett和Tom Preston-Werner使用Ruby on Rails编写而成。
-</p>
-<p>
-GitHub 同时提供付费账户和免费账户。这两种账户都可以创建公开的代码仓库，但是付费账户也可以创建私有的代码仓库。根据在2009年的Git用户调查，GitHub是最流行的Git访问站点。[2]除了允许个人和组织创建和访问代码库以外，它也提供了一些方便社会化软件开发的功能，包括允许用户跟踪其他用户、组织、软件库的动态，对软件代码的改动和 bug 提出评论等。GitHub也提供了图表功能，用于显示开发者们怎样在代码库上工作以及软件的开发活跃程度。
-</p>
-<p>
-截止到 2015 年，GitHub 已经有超过九百万注册用户和 2110 万代码仓库。[3]事实上已经成为了世界上最大的代码存放网站。
-</p>
+<address>
+电子邮箱：yongtao_wei@126.com  
+</address>>
+<address>
+学校：上海理工大学｜专业：计算机科学与技术｜本科
+<address>
 <script>
 			var navitem = document.querySelectorAll(".sidebar-nav-item");
 			navitem[3].className = "sidebar-nav-item active"
