--- a/about.html
+++ b/about.html
@@ -4,10 +4,10 @@ title: Archive
 ---
 <address>
 电子邮箱：yongtao_wei@126.com  
-</address>>
+</address>
 <address>
 学校：上海理工大学｜专业：计算机科学与技术｜本科
-<address>
+</address>
 <script>
 			var navitem = document.querySelectorAll(".sidebar-nav-item");
 			navitem[3].className = "sidebar-nav-item active"
